Se realizan cambios en iconos de redes sociales agregandoles animacion

--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./img/foto151.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/foto151.jpg" class="d-block w-100" alt="Frasco de vidrio etiqueta Wara Pallay">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/foto152.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/foto152.jpg" class="d-block w-100" alt="Frasco de vidrio etiqueta Tikay">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/foto87.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/foto87.jpg" class="d-block w-100" alt="Especias en frasco">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/foto63.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/foto63.jpg" class="d-block w-100" alt="Té en lata">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -107,8 +107,8 @@
               </div>
         </section>
         <section class="redesSociales"> <!--Redes Sociales-->
-                <a class="facebook" href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="./img/facebook.png" alt="logoFacebook" height="49"></a>
-                <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="./img/instagram.png"  alt="logoIntagram" height="50"></a>
+                <a class="facebook animate__animated animate__pulse animate__infinite" href="https://www.facebook.com/WaraPallay/" target="_blank"><img loading="lazy" src="./img/facebook.png" alt="logoFacebook" height="49"></a>
+                <a class="instagram animate__animated animate__pulse animate__infinite" href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img loading="lazy" src="./img/instagram.png" alt="logoIntagram" height="50"></a>
         </section> <!-- Fin del cuerpo de la pagina-->
         <section> <!-- Boton flotante de WhatsApp -->
           <a href="https://api.whatsapp.com/send?phone=3516834536" target="_blank"><img src="./img/whatsapp.png" alt="whatsapp icon" class="btn_wsp"></a>  
