--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -131,12 +131,12 @@
             </form>
         </section> <!-- Fin del Formulario -->
         <section class="redesSociales"> <!--Redes Sociales-->
-            <a class="facebook" href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="../img/facebook.png" alt="logoFacebook" width="49"> </a>
-            <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="../img/instagram.png " alt="logoIntagram" width="50"> </a>
+          <a class="facebook animate__animated animate__pulse animate__infinite" href="https://www.facebook.com/WaraPallay/" target="_blank"><img loading="lazy" src="../img/facebook.png" alt="logoFacebook" height="49"></a>
+          <a class="instagram animate__animated animate__pulse animate__infinite" href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img loading="lazy" src="../img/instagram.png" alt="logoIntagram" height="50"></a>
         </section>
         <section> <!-- Boton flotante de WhatsApp -->
             <a href="https://api.whatsapp.com/send?phone=3518582685" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp icon" class="btn_wsp"></a>  
-          </section> <!-- Boton flotante de WhatsApp -->
+          </section>
         </main>
         <footer> <!--Inicio del pie de pagina-->
             <h5>Autor: Ortiz Gabriel Jesus, estudiante en Coder House, curso de Desarrollo Web </h5>
