--- a/pages/nuestrosClientes.html
+++ b/pages/nuestrosClientes.html
@@ -95,11 +95,9 @@
           </div>
         </div>
         </section>
-
-
         <section class="redesSociales"> <!--Redes Sociales-->
-            <a class="facebook" href="https://www.facebook.com/WaraPallay/" target="_blank"><img src="../img/facebook.png" alt="logoFacebook" width="49"> </a>
-            <a href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img src="../img/instagram.png " alt="logoIntagram" width="50"> </a>
+          <a class="facebook animate__animated animate__pulse animate__infinite" href="https://www.facebook.com/WaraPallay/" target="_blank"><img loading="lazy" src="../img/facebook.png" alt="logoFacebook" height="49"></a>
+          <a class="instagram animate__animated animate__pulse animate__infinite" href="https://www.instagram.com/warapallay/?hl=es" target="_blank"><img loading="lazy" src="../img/instagram.png" alt="logoIntagram" height="50"></a>
         </section>
         <section> <!-- Boton flotante de WhatsApp -->
             <a href="https://api.whatsapp.com/send?phone=3516834536" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp icon" class="btn_wsp"></a>  
