Se hace diseño responsive en la mayoria de .html

--- a/pages/nuestrosClientes.html
+++ b/pages/nuestrosClientes.html
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="card border-warning mb-3" style="max-width: 16.5rem;">
-          <div><a href="https://www.instagram.com/almacendemario/?hl=en" target="_blank"><img src="../img/almacendemario" alt="Logo de comercio, Almacen de Mario." width="262"></a></div>
+          <div><a href="https://www.instagram.com/almacendemario/?hl=en" target="_blank"><img src="../img/almacendemario.jfif" alt="Logo de comercio, Almacen de Mario." width="262"></a></div>
           <div class="card-body">
             <h5 class="card-title">Almacen de Mario</h5>
             <p class="card-text">Local ubicado barrio Centro en la calle Dean Funes 163.</p>
