--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,9 +52,8 @@
             </section>
             <section class="mapa"> <!-- Inicio de la seccion de Mapa-->
                 <p>
-                    En Córdoba, Argentina, se encuentra nuestro deposito en donde nos encargamos de la producción y atencion al cliente. <br>
-                    En la ciudad hacemos entregas sin cargo, además hacemos envíos a todo el país. <br> 
-                    Podes comunicarte via WhatsApp al número de telefono 351-858-2685 o contactate con nosotros a través del siguiente formulario
+                    En Córdoba, Argentina, se encuentra nuestro deposito en donde nos encargamos de la producción y atencion al cliente.
+                    En la ciudad hacemos entregas sin cargo, además hacemos envíos a todo el país.
                 </p>
                 <iframe class="mapaDos" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d851.0286959469132!2d-64.12802387063903!3d-31.438506799999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432bd2176e5aa1f%3A0xa21144935854cb97!2zRWwgRm9ydMOtbiAyMTk4LCBDw7NyZG9iYQ!5e0!3m2!1sen!2sar!4v1657594569993!5m2!1sen!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section> <!-- Fin de seccion de Mapa-->
