--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                   <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                 </li>
                 <li class="nav-item mx-1 mb-1">
-                  <a class="nav-link" href="./pages/nuestrosProductos.html">Nuestros Productos</a>
+                  <a class="nav-link" href="./pages/nuestros-productos.html">Nuestros Productos</a>
                 </li>
                 <li class="nav-item mx-1 mb-1">
                   <a class="nav-link" href="./pages/recetas.html">Recetas</a>
                 </li>
                 <li class="nav-item mx-1 mb-1">
-                  <a class="nav-link" href="./pages/nuestrosClientes.html">Nuestros Clientes</a>
+                  <a class="nav-link" href="./pages/nuestros-clientes.html">Nuestros Clientes</a>
                 </li>
                 <li class="nav-item mx-1 mb-1">
                   <a class="nav-link" href="./pages/contacto.html">Contacto</a>
