--- a/pages/nuestros-productos.html
+++ b/pages/nuestros-productos.html
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="../pages/recetas.html">Recetas</a>
               </li>
               <li class="nav-item mx-1 mb-1">
-                <a class="nav-link" href="../pages/nuestrosClientes.html">Nuestros Clientes</a>
+                <a class="nav-link" href="../pages/nuestros-clientes.html">Nuestros Clientes</a>
               </li>
               <li class="nav-item mx-1 mb-1">
                 <a class="nav-link" href="../pages/contacto.html">Contacto</a>
