--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Distribuidora Wara Pallay, es un emprendimiento familiar que se encarga de la distribucion y elaboración de diversos productos." >
     <meta name="keywords" content="Distribuidora, productos, delicatessen, envios">
+    <meta name="author" content="Ortiz Gabriel Jesus">
+    <meta name="copyright" content="Copyright 2022" >
     <link rel="icon" href="./img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
