--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Desde Distribuidora Wara Pallay te sugerimos diversas recetas para acompañar tus comidas." >
-    <meta name="keywords" content="Recetas, ingredientes, comidas, plato, acompañar">
+    <meta name="keywords" content="Recetas, ingredientes, comidas, plato, acompañar, arroz, pejerrey, flambeada, tortilla, papas">
+    <meta name="author" content="Ortiz Gabriel Jesus">
+    <meta name="copyright" content="Copyright 2022" >
     <link rel="icon" href="../img/favicon.png"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
