Se cambia enlace de recetas en pagination

--- a/pages/recetas-pagina-dos.html
+++ b/pages/recetas-pagina-dos.html
@@ -61,7 +61,7 @@
             <ul class="pagination">
               <li class="page-item"><a class="page-link" href="../pages/recetas.html">&laquo; Anterior</a></li>
               <li class="page-item"><a class="page-link" href="../pages/recetas.html">1</a></li>
-              <li class="page-item active"><a class="page-link" href="../pages/recetasPaginaDos.html">2</a></li>
+              <li class="page-item active"><a class="page-link" href="../pages/recetas-pagina-dos.html">2</a></li>
               <li class="page-item disabled"><a class="page-link" href="#">Siguiente &raquo; </a></li>
             </ul>
         </div>
