--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -114,8 +114,8 @@
             <ul class="pagination">
               <li class="page-item disabled"><a class="page-link" href="#">&laquo; Anterior</a></li>
               <li class="page-item active"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="../pages/recetasPaginaDos.html">2</a></li>
-              <li class="page-item"><a class="page-link" href="../pages/recetasPaginaDos.html">Siguiente &raquo;</a></li>
+              <li class="page-item"><a class="page-link" href="../pages/recetas-pagina-dos.html">2</a></li>
+              <li class="page-item"><a class="page-link" href="../pages/recetas-pagina-dos.html">Siguiente &raquo;</a></li>
             </ul>
         </div>
         </section> <!--Cambio de pestaña-->
