Se cambiaron las recetas faltantes de la pagina 01

--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -56,57 +56,73 @@
         <section class="cuerpoTarjeta">
             <div class="tarjeta">
                 <img src="../img/arrozconesp.jpg" alt="Foto de plato de arroz condimentado" height="200">
-                <h2> Arroz con especias chinas:</h2>
-                <p>Se denomina Especias Chinas a una mezcla de 5 especias muy tradicional en la cocina china, que incorpora los cinco sabores: dulce, acido, amargo, picante y salado. Contiene anís estrellado, pimienta de sichuan, canela cassia, clavo de olor y semillas de hinojo.
-                    INGREDIENTES: 200 grs arroz basmati, 01 pimiento rojo mediano, 01 zanahoria, 01 cebolla.01 puerro, 01 lata de arvejas, 01 diente de ajo, 01 cucharada de especias chinas Wara Pallay y Aceite de oliva.
+                <h2> Arroz con especias dulces:</h2>
+                <p>Se denomina Especias Dulces a una mezcla de 5 especias muy tradicional en la cocina china, que incorpora los cinco sabores: dulce, acido, amargo, picante y salado. Contiene anís estrellado, pimienta de sichuan, canela cassia, clavo de olor y semillas de hinojo.
+                    INGREDIENTES: 200 grs arroz basmati, 01 pimiento rojo mediano, 01 zanahoria, 01 cebolla, 01 puerro, 01 lata de arvejas, 01 diente de ajo, 01 cucharada de especias dulces Wara Pallay y Aceite de oliva.
                     PREPARACIÓN:
                     Prepará el arroz en agua con sal y una cascarita de limón. En un sartén caliente añadí el ajo, luego la cebolla y el puerro. Dos minutos después, el pimiento y la zanahoria, todo cortado en pluma. Cuanto este todo cocido, agregar el arroz ya escurrido y las arvejas. Espolvorear con las especias chinas Wara Pallay, mezclar todo bien y servir.
                     </p>
                 </div>
             <div class="tarjeta">
-                <img src="../img/arrozconesp.jpg" alt="Foto de plato de arroz condimentado" height="200">
-                <h2> Arroz con especias chinas:</h2>
-                <p>Se denomina Especias Chinas a una mezcla de 5 especias muy tradicional en la cocina china, que incorpora los cinco sabores: dulce, acido, amargo, picante y salado. Contiene anís estrellado, pimienta de sichuan, canela cassia, clavo de olor y semillas de hinojo.
-                    INGREDIENTES: 200 grs arroz basmati, 01 pimiento rojo mediano, 01 zanahoria, 01 cebolla.01 puerro, 01 lata de arvejas, 01 diente de ajo, 01 cucharada de especias chinas Wara Pallay y Aceite de oliva.
-                    PREPARACIÓN:
-                    Prepará el arroz en agua con sal y una cascarita de limón. En un sartén caliente añadí el ajo, luego la cebolla y el puerro. Dos minutos después, el pimiento y la zanahoria, todo cortado en pluma. Cuanto este todo cocido, agregar el arroz ya escurrido y las arvejas. Espolvorear con las especias chinas Wara Pallay, mezclar todo bien y servir.
-                    </p>
+                <img src="../img/matambrearrollado.jpg" alt="Foto de plato matambre arrollado" height="200">
+                <h2>Matambre arrollado, con Sal ahumada con orégano y Sal con cebolla y albahaca: </h2>
+                <p>
+                  PREPARACIÓN:
+                  Se desgrasa el matambre, se empareja los bordes quedando rectangular.
+                  Se coloca sobre papel film, el cual nos ayudará para enroscarlo luego. 
+                  Coloco mis condimentos preferidos Wara Pallay: sal ahumada con orégano y sal con albahaca y cebolla . 
+                  Colocar zanahoria en láminas crudas hechas con mandolina. 
+                  Esparcir arvejas congeladas, colocar tiras de morrón al aceite logrando filas paralelas cada 5 cm aproximadamente. 
+                  Rociar con aceite de oliva extra virgen. 
+                  Cubrir con una fina capa de mozarella rallada para lograr una mejor unión de los ingredientes. 
+                  Colocar al comienzo una fila de huevos duros entero. 
+                  Ayudándose con el film, arrollar presionando, logrando así compactar la preparación. 
+                  Cubrir y colocar nuevamente una vuelta de papel film presionando lo más q se pueda el arrollado. 
+                  Bridar con hilo de algodón para conservar la forma. 
+                  Colocar en la cacerola el arrollado, cubrirlo de agua hirviendo y dejarlo cocinar por 2:30 horas aprox. 
+                  Cumplido el tiempo de cocción, reposar por 30 min y luego prensar 2 horas cortando la punta del papel film para que escurra el agua de cocción. 
+                  Colocar en la heladera. 
+                </p>
                 </div>
                 <div class="tarjeta">
-                <img src="../img/arrozconesp.jpg" alt="Foto de plato de arroz condimentado" height="200">
-                <h2> Arroz con especias chinas:</h2>
-                <p>Se denomina Especias Chinas a una mezcla de 5 especias muy tradicional en la cocina china, que incorpora los cinco sabores: dulce, acido, amargo, picante y salado. Contiene anís estrellado, pimienta de sichuan, canela cassia, clavo de olor y semillas de hinojo.
-                    INGREDIENTES: 200 grs arroz basmati, 01 pimiento rojo mediano, 01 zanahoria, 01 cebolla.01 puerro, 01 lata de arvejas, 01 diente de ajo, 01 cucharada de especias chinas Wara Pallay y Aceite de oliva.
-                    PREPARACIÓN:
-                    Prepará el arroz en agua con sal y una cascarita de limón. En un sartén caliente añadí el ajo, luego la cebolla y el puerro. Dos minutos después, el pimiento y la zanahoria, todo cortado en pluma. Cuanto este todo cocido, agregar el arroz ya escurrido y las arvejas. Espolvorear con las especias chinas Wara Pallay, mezclar todo bien y servir.
-                    </p>
+                <img src="../img/filetdepejerrey.jpg" alt="Foto de plato de filet de pejerrey" height="200">
+                <h2>Filet de Pejerrey con Chermoula Wara Pallay.:</h2>
+                <p>
+                  INGREDIENTES:
+                  Filet de pejerrey,Coliflor fresco, Akusai (aunque puede ser cualquier lechuga), Perejil picado, Coco rallado, Aceite de Oliva virgen, Chermoula Wara Pallay y Sal Negra.
+                  PREPARACIÓN:
+                  Retirar los pedazos de espinas que puedan haber quedado en el filet, repasándolo con la yema de los dedos para sentirlas. Condimentarlo, de un lado, espolvoreando el Chermoula Wara Pallay con un colador. Del otro lado, agregar la sal negra y el coco rallado. Dorar apenas en la sartén, con un chorrito de aceite de oliva virgen y a fuego bajo, para que no se queme y quede dorado de ambos lados. Tapamos un momento para que no se nos seque demasiado.
+                  Es importante recordar que los filets se cocinan muy rápido. Si es necesario, para no pasar de temperatura el aceite, poner un difusor en la hornalla.
+                  Con los restos de Chermoula que quedaron en el colador, y un poco de sal, condimentamos la ensalada de coliflor y akusai. 
+                </p>
                 </div>
                 <div class="tarjeta">
-                <img src="../img/arrozconesp.jpg" alt="Foto de plato de arroz condimentado" height="200">
-                <h2> Arroz con especias chinas:</h2>
-                <p>Se denomina Especias Chinas a una mezcla de 5 especias muy tradicional en la cocina china, que incorpora los cinco sabores: dulce, acido, amargo, picante y salado. Contiene anís estrellado, pimienta de sichuan, canela cassia, clavo de olor y semillas de hinojo.
-                    INGREDIENTES: 200 grs arroz basmati, 01 pimiento rojo mediano, 01 zanahoria, 01 cebolla.01 puerro, 01 lata de arvejas, 01 diente de ajo, 01 cucharada de especias chinas Wara Pallay y Aceite de oliva.
-                    PREPARACIÓN:
-                    Prepará el arroz en agua con sal y una cascarita de limón. En un sartén caliente añadí el ajo, luego la cebolla y el puerro. Dos minutos después, el pimiento y la zanahoria, todo cortado en pluma. Cuanto este todo cocido, agregar el arroz ya escurrido y las arvejas. Espolvorear con las especias chinas Wara Pallay, mezclar todo bien y servir.
-                    </p>
+                <img src="../img/entraflameaba.jpg" alt="Foto de plato de entraña flambeada" height="200">
+                <h2>Entraña flambeada a las Finas Hierbas:</h2>
+                <p>
+                  Finas hierbas se denomina a una mezcla de especias muy utilizada en la zona del Mar Mediterráneo para sazonar carnes de vaca, de cordero o de cerdo. También se puede utilizar en salsas rojas. Esta compuesta por tomillo, romero, salvia, estragón y mostaza en grano.
+                  INGREDIENTES.
+                  500 grs de entraña,02 cucharadas soperas de finas hierbas Wara Pallay, 750 cc de vino tinto, Aceite de oliva, sal y pimienta a gusto, 300 cc de caldo de verduras y Cognac o whisky.
+                  PREPARACIÓN.
+                  Salpimentar las entrañas, sellarlas en una plancha o sartén a fuego fuerte, hasta que estén bien doradas. Retirar del sartén/plancha y colocar en una placa para horno profunda. En el mismo sartén, levantar el fondo de cocción con el caldo de verduras y agregar sobre la entraña, junto con el vino tinto y las finas hierbas Wara Pallay. Cubrir la placa con papel de aluminio y cocinar en horno a fuego medio, durante 1 hora y media. Sacar del horno, retirar el papel aluminio, rociar con el cognac o el whisky y flambear. Cuando apague, filetear y servir.
+                </p>
                 </div>
             <div class="tarjeta">
-                <img src="../img/arrozconesp.jpg" alt="Foto de plato de arroz condimentado" height="200">
-                <h2> Arroz con especias chinas:</h2>
-                <p>Se denomina Especias Chinas a una mezcla de 5 especias muy tradicional en la cocina china, que incorpora los cinco sabores: dulce, acido, amargo, picante y salado. Contiene anís estrellado, pimienta de sichuan, canela cassia, clavo de olor y semillas de hinojo.
-                    INGREDIENTES: 200 grs arroz basmati, 01 pimiento rojo mediano, 01 zanahoria, 01 cebolla.01 puerro, 01 lata de arvejas, 01 diente de ajo, 01 cucharada de especias chinas Wara Pallay y Aceite de oliva.
-                    PREPARACIÓN:
-                    Prepará el arroz en agua con sal y una cascarita de limón. En un sartén caliente añadí el ajo, luego la cebolla y el puerro. Dos minutos después, el pimiento y la zanahoria, todo cortado en pluma. Cuanto este todo cocido, agregar el arroz ya escurrido y las arvejas. Espolvorear con las especias chinas Wara Pallay, mezclar todo bien y servir.
-                    </p>
+                <img src="../img/tortilladepapas.jpg" alt="Foto de plato de tortilla de papas" height="200">
+                <h2>Tortilla de papas ralladas, con cerezas picantes Wara Pallay:</h2>
+                <p>
+                  Cerezas picantes es una mezcla de cebolla, jengibre, cerezas, pimienta negra y ají tostado, INGREDIENTE, 01 papa mediana por persona, 1 huevo por persona, Perejil (cantidad a gusto), Cerezas picantes Wara Pallay, Sal negra y Aceite de oliva.
+                  PREPARACIÓN:
+                  Rallar las papas y disponer en sartén con gotas de aceite de oliva. Si es necesario, ir aplastando con tenedor en forma redonda para que sirva de base al huevo. Dorar de un lado y dar vuelta, condimentar con sal y cerezas picantes de Wara Pallay. Mantener un ratito que se vaya dorando el fondo. La tortilla al ser finita, debe quedar algo crocante. Después poner los huevos, notarán que la clara se escurre un poquito entre la papa rallada. Tapar y con fuego mínimo dejar que se cocine bien la clara y un poco la yema. Presentar en plato o fuente con bastante perejil.
+                </p>
                 </div>
                 <div class="tarjeta">
-                <img src="../img/arrozconesp.jpg" alt="Foto de plato de arroz condimentado" height="200">
-                <h2> Arroz con especias chinas:</h2>
-                <p>Se denomina Especias Chinas a una mezcla de 5 especias muy tradicional en la cocina china, que incorpora los cinco sabores: dulce, acido, amargo, picante y salado. Contiene anís estrellado, pimienta de sichuan, canela cassia, clavo de olor y semillas de hinojo.
-                    INGREDIENTES: 200 grs arroz basmati, 01 pimiento rojo mediano, 01 zanahoria, 01 cebolla.01 puerro, 01 lata de arvejas, 01 diente de ajo, 01 cucharada de especias chinas Wara Pallay y Aceite de oliva.
-                    PREPARACIÓN:
-                    Prepará el arroz en agua con sal y una cascarita de limón. En un sartén caliente añadí el ajo, luego la cebolla y el puerro. Dos minutos después, el pimiento y la zanahoria, todo cortado en pluma. Cuanto este todo cocido, agregar el arroz ya escurrido y las arvejas. Espolvorear con las especias chinas Wara Pallay, mezclar todo bien y servir.
-                    </p>
+                <img src="../img/boladelomo.jpg" alt="Foto de plato de bola de lomo de cerdo" height="200">
+                <h2>Bola de lomo de cerdo, rellena, con especias de Wara Pallay.:</h2>
+                <p>
+                  Rellenar la bola de lomo con panceta salada y peras hidratadas. Luego, sellar en sartén acompañada de ajos. 
+                  Poner la carne en una bolsa para horno, y condimentar con Zahatar Wara Pallay, mostaza, verdeo y un poco de aceite de oliva. La cocinera sugiere además, un toque de Seis Pimientas Wara Pallay.  Llevar la preparación a horno moderado por dos horas. Una vez que esté todo listo, elegir un buen vino o una buena bebida para acompañar esta deliciosa propuesta.
+                </p>
                 </div>
         </section>
         <section> <!--Cambio de pestaña-->
